--- a/.env.dev
+++ b/.env.dev
@@ -8,4 +8,4 @@
 # @see https://www.prisma.io/docs/reference/database-reference/connection-urls
 
 # MongoDB
-MONGODB_URI=mongodb+srv://vercel-admin-user
+MONGODB_URI=mongodb+srv://vercel-admin-user-64f62a6db0a3d3215b39d38a:MqUSpEZJRXVAJJk9@serverless-cluster-1.s3oniem.mongodb.net/db?retryWrites=true&w=majority
