--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "next-themes": "npm:@wits/next-themes@^0.2.16",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "server-only": "^0.0.1",
     "superjson": "^1.13.1",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
